[CORE] ArmorStandEditor 1.20-44: Fixes and New UI! (#311)
* [CORE] Version Bump: 1.20-44

* [CORE] Fix for #309. Add Check for ArmorStand Vulnerability and prevent destruction in Creative Mode when its Invulnerable

* [CORE] Upgrade Codebase to 17

* [CORE] Bump Base API Version to 1.17

* [CORE] Autoformatting and Order Imports

* [CORE] Per World Support for ArmorStandEditor

* [CORE] Better Implementation for Per World Support for ArmorStandEditor. More in line with what is expected!

* [CORE] Better Implementation for Per World Support for ArmorStandEditor. More in line with what is expected!

* [CORE] Version Bump: 1.20-44

* [CORE] Fix for #309. Add Check for ArmorStand Vulnerability and prevent destruction in Creative Mode when its Invulnerable

* [CORE] Upgrade Codebase to 17

* [CORE] Bump Base API Version to 1.17

* [CORE] Autoformatting and Order Imports

* [CORE] Per World Support for ArmorStandEditor

* [CORE] Better Implementation for Per World Support for ArmorStandEditor. More in line with what is expected!

* [CORE] Better Implementation for Per World Support for ArmorStandEditor. More in line with what is expected!

* [CORE] Config Support for Per World ArmorStandEditor.

* [CI-SKIP] Something to use for later if we ever move to Paper.

* [CORE] Fix for Messages not being sent properly in ASE. Bug from #315

Plus Potential Fix for #272

* [CORE] Bump ASE to 1.20.2-44

* [CORE] New UI Design #DreiFxn

* [CORE] Upgrade Fix: Fix ArmorStandVisibility Not working Properly

* [CORE] Bump Lands to 6.35.0 - Closes #310 and #328

* [CORE] Bump Towny to 0.99.5.20 - Closes #326 and #332

* [CORE] Bump Lombok to 1.18.30

* [CORE] Bump MavenShade to 3.5.1

* [CORE] Fixes found when Debugging 1.20.2-44:

- Add in No Perm Message if a user cant run a certain toggle
- Fix for the PlayerHead Menu Option
- Add all new strings for NoPermOption to the Language Files
- Fix Toggles

* [CORE] Refactor PlotSquar